plugins {
    id 'org.springframework.boot' version '2.7.3'
    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
    id 'java'
}

group = 'com.kolvzaki'
version = '1.0.0'
sourceCompatibility = '11'
targetCompatibility = '11'


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}


repositories {
    maven {
        url 'https://maven.aliyun.com/repository/public/'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'mysql:mysql-connector-java'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'cn.hutool:hutool-all:5.8.7'
}

tasks.named('test') {
    useJUnitPlatform()
}
